# CppTemplate_Raspberry

./: CMakeLists.txt  DoxygenConfig.txt  README.md  Raspberry_Cpp_Template.geany  main.cpp
inc/: MyTemplate_RPI_Class.h
src/: MyTemplate_RPI_Class.cpp
